--- a/views/index.ejs
+++ b/views/index.ejs
@@ -301,6 +301,8 @@
     
     <!-- <script type='module' src='/js/client/react/InfoPanel.mjs'></script> -->
     
+    <script src='/js/lib/virtualjoystick.js'></script>
+    
     <script type='module'>
       import {Game} from '/js/client/Game.mjs';
       GLOBALS = {};
