working on virtual joystick

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -299,6 +299,10 @@
     
     <script type='module' src='/js/client/Game.mjs'></script>
     
+    <!-- <script type='module' src='/js/client/react/InfoPanel.mjs'></script> -->
+    
+    <script src='/js/lib/virtualjoystick.js'></script>
+    
     <script type='module'>
       import {Game} from '/js/client/Game.mjs';
       GLOBALS = {};
